Ajustes de warning's Correção para deletar registros órfãos posteriores.